# proj.zesp

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/includes/: client.h  main.h  receiver.h  ui.h
client/sources/: client.cpp  main.cpp  receiver.cpp  ui.cpp
server/: CMakeLists.txt
server/includes/: channel.h  client.h  database.h  main.h
server/sources/: channel.cpp  client.cpp  database.cpp  main.cpp
shared/includes/: messages.h
sources/: .main.cpp.swp  main.cpp
